--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
       "description": "Twitter MVP using NextUI",
       "main": "index.js",
       "scripts": {
-        "dev": "vite",
-        "start": "node server.js"
+            "dev": "vite",
+            "start": "node server.js"
       },
       "dependencies": {
-        "@nextui-org/react": "^1.0.0-beta.13",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.10.0",
-        "sqlite": "^4.0.0",
-        "express": "^4.18.2"
+            "@faker-js/faker": "^9.3.0",
+            "@nextui-org/react": "^1.0.0-beta.13",
+            "express": "^4.18.2",
+            "faker": "^6.6.6",
+            "react": "^18.2.0",
+            "react-dom": "^18.2.0",
+            "react-router-dom": "^6.10.0",
+            "sql.js": "^1.12.0",
+            "sqlite": "^4.0.0"
       },
       "devDependencies": {
-        "vite": "^4.2.0"
+            "vite": "^4.2.0"
       }
-    }
+}
