--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
             "start": "node server.js"
       },
       "dependencies": {
-            "@faker-js/faker": "^9.3.0",
+            "@faker-js/faker": "^7.6.0",
             "@nextui-org/react": "^1.0.0-beta.13",
+            "body-parser": "^1.20.2",
             "express": "^4.18.2",
-            "faker": "^6.6.6",
+            "express-session": "^1.17.3",
+            "mongodb": "^5.0.0",
             "react": "^18.2.0",
             "react-dom": "^18.2.0",
-            "react-router-dom": "^6.10.0",
-            "sql.js": "^1.12.0",
-            "sqlite": "^4.0.0"
+            "react-router-dom": "^6.10.0"
       },
       "devDependencies": {
             "vite": "^4.2.0"
-      }
+      },
+      "type": "module"
 }
