--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
             "mongodb": "^5.0.0",
             "react": "^18.2.0",
             "react-dom": "^18.2.0",
-            "react-router-dom": "^6.10.0"
+            "react-router-dom": "^6.10.0",
+            "sqlite": "^5.1.1",
+            "sqlite3": "^5.1.7"
       },
       "devDependencies": {
             "vite": "^4.2.0"
