--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
       "description": "Twitter MVP using NextUI",
       "main": "index.js",
       "scripts": {
-            "dev": "vite",
-            "start": "node server.js"
+        "dev": "vite",
+        "start": "node server.js"
       },
       "dependencies": {
-            "@faker-js/faker": "^7.6.0",
-            "@nextui-org/react": "^1.0.0-beta.13",
-            "body-parser": "^1.20.2",
-            "express": "^4.18.2",
-            "express-session": "^1.17.3",
-            "mongodb": "^5.0.0",
-            "react": "^18.2.0",
-            "react-dom": "^18.2.0",
-            "react-router-dom": "^6.10.0",
-            "sqlite": "^5.1.1",
-            "sqlite3": "^5.1.7"
+        "@faker-js/faker": "^7.6.0",
+        "@nextui-org/react": "^1.0.0-beta.13",
+        "body-parser": "^1.20.2",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "mongodb": "^5.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.10.0",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7"
       },
       "devDependencies": {
-            "vite": "^4.2.0"
+        "vite": "^4.2.0",
+        "@vitejs/plugin-react": "^4.0.0"
       },
       "type": "module"
-}
+    }
