--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.10.0",
         "sqlite": "^5.1.1",
-        "sqlite3": "^5.1.7"
+        "sqlite3": "^5.1.7",
+        "node-fetch": "^3.3.2"
       },
       "devDependencies": {
         "vite": "^4.2.0",
