--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-      "name": "flow",
-      "version": "1.0.0",
-      "description": "Twitter MVP using NextUI",
-      "main": "index.js",
-      "scripts": {
-        "dev": "vite",
-        "start": "node server.js"
-      },
-      "dependencies": {
-        "@faker-js/faker": "^7.6.0",
-        "@nextui-org/react": "^1.0.0-beta.13",
-        "body-parser": "^1.20.2",
-        "express": "^4.18.2",
-        "express-session": "^1.17.3",
-        "mongodb": "^5.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.10.0",
-        "node-fetch": "^3.3.2"
-      },
-      "devDependencies": {
-        "vite": "^4.2.0",
-        "@vitejs/plugin-react": "^4.0.0"
-      },
-      "type": "module"
-    }
+  "name": "twitter-mvp",
+  "version": "1.0.0",
+  "description": "Twitter MVP using NeDB and NextUI",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "idb": "^8.0.1",
+    "nedb": "^1.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.2.0"
+  },
+  "type": "module"
+}
